--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,8 @@
 <footer class="footer">
   <small>
     The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
+    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>,
+    completed by <a href="http://www.byjor.com/">Jordan Arnesen</a>
   </small>
   <nav>
     <ul>
